--- a/css/index.css
+++ b/css/index.css
@@ -66,66 +66,45 @@ p {
     line-height: 1.4;
 }
 
-.headerBox {
-    width: 800px;
-    display:flex;
+
+.header{
+ display:flex;
+    /* border: 4px solid red; */
+    width: 100%;    height: 10%;
+    text-align: center;
     justify-content: space-evenly;
-    border: 5px dashed red;
-}
-.logo{
-    width: 800px
-}
 
-.Links{
-    display:flex;
+}
+    .logo{
+        /* border: 4px solid blue; */
+        padding-top: 10px;
+            }
+    a {
+        /* border: 4px solid green; */
+        float: left;
+        color: #0c0404;
+        text-align: center;
+        padding: 20px 5px;
+        text-decoration: none;
+        font-size: 20px;
+    }
+
+.container {
     width: 800px;
-    justify-content: space-around;
-    align-items: center;
-    color: #00ced1
+    margin: 0 auto;
+    /* 
+     */
 }
-/* nav a {
-    display:flex;
-    
-    width: 100%;
- 
-    display: flex;
-    justify-content: space-between;
-} */
-
 
 .top-content {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 40px;
-    border: 5px dashed black;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+    border-bottom: 1px dashed black;
 }
 
-}
-header nav {
-    width: 80%;
-    background-color: #fcfafa;
-    display: flex;
-    justify-content: space-around;
-    border: 5px dashed black;
-}
-
-nav a {
-    display:flex;
-    color: #00ced1;
-    text-decoration: none;
-    letter-spacing: 10px;
-    border: 5px dashed black;
-}
-/* nav a:hover {
-    color: #afeeee;
-} */
-/* .logo {
-    display:flex;
-    border: 5px dashed black;
-} */
-
-.top-content .text-container {
+.top-content .text-container { 
     width: 48%;
     padding: 0 1%;
     padding-bottom: 20px;  
@@ -150,12 +129,132 @@ nav a {
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
-    background: black;
+    background: teal;
     margin: 20px 2.5%;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.box2 {
+    width: 12.5%;
+    height: 100px;
+    background: gold;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box3 {
+    width: 12.5%;
+    height: 100px;
+    background: cadetblue;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box4 {
+    width: 12.5%;
+    height: 100px;
+    background: coral;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box5 {
+    width: 12.5%;
+    height: 100px;
+    background: crimson;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box6 {
+    width: 12.5%;
+    height: 100px;
+    background: forestgreen;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box7 {
+    width: 12.5%;
+    height: 100px;
+    background: darkorchid;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box8 {
+    width: 12.5%;
+    height: 100px;
+    background: hotpink;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box9 {
+    width: 12.5%;
+    height: 100px;
+    background: indigo;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box10 {
+    width: 12.5%;
+    height: 100px;
+    background: dodgerblue;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.abouttitle{
+    display:flex;
+    justify-content: left;
+    margin: 20px
+    border: 4px solid blue;
+
+}
+.aboutintro {
+    display:flex;
+    border: 4px solid red;
+    width: 100%;
+    flex-wrap: wrap;
+    text-decoration-style: bold;
+
+}
+
+.mainbody {
+    border: 4px solid green;
+
+}
+.plan {
+    width: 50%;
+    border: 4px solid blue;
+    display:flex;
+    padding-top: 5px;
+    text-align: right;
+
+
 }
 
 .bottom-content {
