--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,58 @@
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 html, body {
-    
     height: 100%;
     font-family: 'Roboto', sans-serif;
 }
@@ -11,67 +63,196 @@ h1, h2, h3, h4, h5 {
     font-family: 'Rubik', sans-serif;
 }
 
-/* Parent to Logo And Links  */
-body{
-    width: 800px;
-    border: 2px solid blue;
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  
+p {
+    line-height: 1.4;
 }
-.header{
-    display:flex;
-    border: 1px solid rgb(165, 50, 50);
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width:100%;
 
-    /* margin: 20px 20px; */
+/* Body Wrap */
+.container {
+    width: 800px;
+    margin: 0 auto;
 }
-.logo {
-    border: 3px solid blue;
-    width: 15%;
+
+/* Beginign of header */
+
+header {
+    display:flex;
+    /* border: 2px solid blue; */
+    text-decoration: none;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 40px 20px;
+    color: black;
+}
+.logoimg {
+    /* border: 2px solid green; */ 
+    width:100%;
 }
 nav {
     display:flex;
+    width: 80%;
+    /* border: 1px solid red; */
     justify-content: space-evenly;
-    border: 2px solid blue;
-    width: 40%;
-    padding-top: 10px;
 }
-/* Changes Attributes to Individual links inside the LINKS box  */
-nav a {
-    text-align: center;
-    font-size: x-large;
+a {    
+    /* border: 2px solid yellow; */
     text-decoration: none;
-    display:flex;
-    justify-content: space-around;
-    width: 10%;
+    font-size: large;
+    color: black;
+}
+/* Beggining of Middle Content */
+
+.mainimg{
+    padding-bottom: 20px;
 }
 
-.aboutintro{
-         border: 2px solid blue;
-    }
-.body1{
-    display:flex;
-    width:30%;
+/* Index's Middle Content */
+.top-content {
+    display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+    border-bottom: 1px dashed black;
 }
-.plan{
-    display:flex;
-       
-        flex-direction: column;
-        
-    }
-.body2{
-    display:flex;
-    width:30%;
+
+.top-content .text-container {
+    width: 48%;
+    padding: 0 1%;
+    padding-bottom: 20px;  
+}
+
+.middle-content {
+    margin-bottom: 20px;
+    border-bottom: 1px dashed black;
+}
+
+.middle-content h2 {
+    padding: 0 2%;
+    margin-bottom: 0;
+}
+
+.middle-content .boxes {
+    display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
+
+.middle-content .boxes .box {
+    width: 12.5%;
+    height: 100px;
+    background: teal;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+.box2 {
+    width: 12.5%;
+    height: 100px;
+    background: gold;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box3 {
+    width: 12.5%;
+    height: 100px;
+    background: cadetblue;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box4 {
+    width: 12.5%;
+    height: 100px;
+    background: coral;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box5 {
+    width: 12.5%;
+    height: 100px;
+    background: crimson;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box6 {
+    width: 12.5%;
+    height: 100px;
+    background: forestgreen;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box7 {
+    width: 12.5%;
+    height: 100px;
+    background: darkorchid;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box8 {
+    width: 12.5%;
+    height: 100px;
+    background: hotpink;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box9 {
+    width: 12.5%;
+    height: 100px;
+    background: indigo;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box10 {
+    width: 12.5%;
+    height: 100px;
+    background: dodgerblue;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.bottom-content {
+    display: flex;
+    margin: 0 2% 20px;
+    justify-content: space-around;
+}
+
+.bottom-content .text-container {
+    padding-right: 4%;
+}
+
+.bottom-content .text-container:last-child {
+    padding-right: 0;
+}
+
+/* Footer and Bottom nave links */
+
 footer {
     width: 100%;
     background: black;
@@ -89,4 +270,63 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+
+/* about page middle content */
+
+.middlewrap {
+    padding:1px;
+    border-bottom: 1px dashed black;
+}
+.sections {
+    display:flex;
+    /* border: 2px dashed black; */
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    width:100%;
+    margin: 20px 0px 20px 0px;
+}
+.midimg{
+    width: 250px;
+}
+   
+.strategywrp{
+    /* border: 2px solid green; */
+    flex-wrap: wrap;
+    width: 45%;
+    padding-bottom: 10px;
+    border-bottom: 1px dashed black;
+}
+.workwrp{
+    /* border: 2px solid blue; */
+    flex-wrap: wrap;
+    width: 45%;
+    padding-bottom: 10px;
+    border-bottom: 1px dashed black;
+}
+.officewrp{
+    
+    /* border: 2px solid green; */
+    flex-wrap: wrap;
+    width: 45%;
+    padding-bottom: 10px;
+    border-bottom: 1px dashed black;
+}
+
+.meetingwrp{
+    /* border: 2px solid gold; */
+    flex-wrap: wrap;
+    width: 45%;
+    padding-bottom: 10px;
+    border-bottom: 1px dashed black;
+}
+
+.lmButton {
+    border: 2px solid black;
+    border-radius: 7%;
+    margin: 3px;
+    padding: 2px;
+    font-size: small;
 }
